bugfix vor card overflow

--- a/main.scss
+++ b/main.scss
@@ -209,9 +209,9 @@ body {
     height: 20%;
   }
   .testimonials__testimonial:nth-of-type(2) {
-    margin-top: 2rem;
+    margin-top: 1rem;
   }
   .testimonials__testimonial:nth-of-type(3) {
-    margin-top: 4rem;
+    margin-top: 2rem;
   }
 }
